fix on safari

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,7 +48,6 @@ $header-background:  "/images/background.jpg";
   }
   100% {
     opacity: 0;
-    display: none;
   }
 }
 
